// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should render a three column table 1`] = `
<div>
  <table
    class="nhsuk-table-responsive"
  >
    <caption
      class="nhsuk-table__caption"
    >
      Ibuprofen tablet dosages for children
    </caption>
    <thead
      class="nhsuk-table__head"
      role="rowgroup"
    >
      <tr
        role="row"
      >
        <th
          role="columnheader"
          scope="col"
        >
          Age
        </th>
        <th
          role="columnheader"
          scope="col"
        >
          How much
        </th>
        <th
          role="columnheader"
          scope="col"
        >
          How often
        </th>
      </tr>
    </thead>
    <tbody
      class="nhsuk-table__body"
    >
      <tr
        class="nhsuk-table__row"
        role="row"
      >
        <td
          class="nhsuk-table__cell"
        >
          <span
            aria-hidden="true"
            class="nhsuk-table-responsive__heading"
          >
            Age
             
          </span>
          7 to 9 years
        </td>
        <td
          class="nhsuk-table__cell"
        >
          <span
            aria-hidden="true"
            class="nhsuk-table-responsive__heading"
          >
            How much?
             
          </span>
          200mg
        </td>
        <td
          class="nhsuk-table__cell"
        >
          <span
            aria-hidden="true"
            class="nhsuk-table-responsive__heading"
          >
            How often?
             
          </span>
          Max 3 times in 24 hours
        </td>
      </tr>
      <tr
        class="nhsuk-table__row"
        role="row"
      >
        <td
          class="nhsuk-table__cell"
        >
          <span
            aria-hidden="true"
            class="nhsuk-table-responsive__heading"
          >
            Age
             
          </span>
          10 to 11 years
        </td>
        <td
          class="nhsuk-table__cell"
        >
          <span
            aria-hidden="true"
            class="nhsuk-table-responsive__heading"
          >
            How much?
             
          </span>
          200mg to 300mg
        </td>
        <td
          class="nhsuk-table__cell"
        >
          <span
            aria-hidden="true"
            class="nhsuk-table-responsive__heading"
          >
            How often?
             
          </span>
          Max 3 times in 24 hours
        </td>
      </tr>
      <tr
        class="nhsuk-table__row"
        role="row"
      >
        <td
          class="nhsuk-table__cell"
        >
          <span
            aria-hidden="true"
            class="nhsuk-table-responsive__heading"
          >
            Age
             
          </span>
          12 to 17 years
        </td>
        <td
          class="nhsuk-table__cell"
        >
          <span
            aria-hidden="true"
            class="nhsuk-table-responsive__heading"
          >
            How much?
             
          </span>
          200mg to 400mg
        </td>
        <td
          class="nhsuk-table__cell"
        >
          <span
            aria-hidden="true"
            class="nhsuk-table-responsive__heading"
          >
            How often?
             
          </span>
          Max 3 times in 24 hours
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`should render a three column table with the first cell as a header 1`] = `
<div>
  <div
    class="nhsuk-width-container"
  >
    <div
      class="nhsuk-grid-row"
    >
      <div
        class="nhsuk-grid-column-two-thirds"
      >
        <table
          class="nhsuk-table-responsive"
        >
          <caption
            class="nhsuk-table__caption"
          >
            Prescription prepayment certificate (PPC) charges
          </caption>
          <thead
            class="nhsuk-table__head"
            role="rowgroup"
          >
            <tr
              role="row"
            >
              <th
                role="columnheader"
                scope="col"
              >
                Item
              </th>
              <th
                class="nhsuk-table__header--numeric"
                role="columnheader"
                scope="col"
              >
                Current charge
              </th>
              <th
                class="nhsuk-table__header--numeric"
                role="columnheader"
                scope="col"
              >
                New charge
              </th>
            </tr>
          </thead>
          <tbody
            class="nhsuk-table__body"
          >
            <tr
              class="nhsuk-table__row"
              role="none"
            >
              <th
                class="nhsuk-table__header"
                scope="row"
              >
                <span
                  aria-hidden="true"
                  class="nhsuk-table-responsive__heading"
                >
                  Item
                   
                </span>
                3-month
              </th>
              <td
                class="nhsuk-table__cell nhsuk-table__cell--numeric"
              >
                <span
                  aria-hidden="true"
                  class="nhsuk-table-responsive__heading"
                >
                  Current charge
                   
                </span>
                £31.25
              </td>
              <td
                class="nhsuk-table__cell nhsuk-table__cell--numeric"
              >
                <span
                  aria-hidden="true"
                  class="nhsuk-table-responsive__heading"
                >
                  New charge
                   
                </span>
                £32.05
              </td>
            </tr>
            <tr
              class="nhsuk-table__row"
              role="row"
            >
              <th
                class="nhsuk-table__header"
                scope="row"
              >
                <span
                  aria-hidden="true"
                  class="nhsuk-table-responsive__heading"
                >
                  Item
                   
                </span>
                12-month
              </th>
              <td
                class="nhsuk-table__cell nhsuk-table__cell--numeric"
              >
                <span
                  aria-hidden="true"
                  class="nhsuk-table-responsive__heading"
                >
                  Current charge
                   
                </span>
                £111.60
              </td>
              <td
                class="nhsuk-table__cell nhsuk-table__cell--numeric"
              >
                <span
                  aria-hidden="true"
                  class="nhsuk-table-responsive__heading"
                >
                  New charge
                   
                </span>
                £114.50
              </td>
            </tr>
            <tr
              class="nhsuk-table__row"
              role="row"
            >
              <th
                class="nhsuk-table__header"
                scope="row"
              >
                <span
                  aria-hidden="true"
                  class="nhsuk-table-responsive__heading"
                >
                  Item
                   
                </span>
                HRT
              </th>
              <td
                class="nhsuk-table__cell nhsuk-table__cell--numeric"
              >
                <span
                  aria-hidden="true"
                  class="nhsuk-table-responsive__heading"
                >
                  Current charge
                   
                </span>
                £19.30
              </td>
              <td
                class="nhsuk-table__cell nhsuk-table__cell--numeric"
              >
                <span
                  aria-hidden="true"
                  class="nhsuk-table-responsive__heading"
                >
                  New charge
                   
                </span>
                £19.80
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render a two column table 1`] = `
<div>
  <table
    class="nhsuk-table"
  >
    <caption
      class="nhsuk-table__caption"
    >
      Skin symptoms and possible causes
    </caption>
    <thead
      class="nhsuk-table__head"
      role="rowgroup"
    >
      <tr
        role="row"
      >
        <th
          role="columnheader"
          scope="col"
        >
          Skin symptoms
        </th>
        <th
          role="columnheader"
          scope="col"
        >
          Possible cause
        </th>
      </tr>
    </thead>
    <tbody
      class="nhsuk-table__body"
    >
      <tr
        class="nhsuk-table__row"
        role="row"
      >
        <td
          class="nhsuk-table__cell"
        >
          Blisters on lips or around the mouth
        </td>
        <td
          class="nhsuk-table__cell"
        >
          cold sores
        </td>
      </tr>
      <tr
        class="nhsuk-table__row"
        role="row"
      >
        <td
          class="nhsuk-table__cell"
        >
          Itchy, dry, cracked, sore
        </td>
        <td
          class="nhsuk-table__cell"
        >
          eczema
        </td>
      </tr>
      <tr
        class="nhsuk-table__row"
        role="row"
      >
        <td
          class="nhsuk-table__cell"
        >
          Red, scaly patches
        </td>
        <td
          class="nhsuk-table__cell"
        >
          psoriasis
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
